--- a/css/cleanup.css
+++ b/css/cleanup.css
@@ -1,6 +1,8 @@
 /* write your override styles here */
 #wall .tag-1 {
-  display: none; 
+  display: none;
 }
 
-#
+.tag-2 #wall  {
+  display: none; 
+}
