--- a/css/cleanup.css
+++ b/css/cleanup.css
@@ -3,12 +3,10 @@
   display: none;
 }
 
-#tag-2 {
-  display: none;
-}
-
 body #wall #tag-2{
   display: none;
 }
 
-#
+body #wall #tag-3 {
+  display: none;
+}
