automatically backed up by learn

--- a/css/cleanup.css
+++ b/css/cleanup.css
@@ -10,3 +10,7 @@ body #wall #tag-2{
 body #wall #tag-3.slick, #tag-3.wicked {
   display: none;
 }
+
+body #wall .parent #tag-4 {
+  display: none; 
+}
