--- a/css/cleanup.css
+++ b/css/cleanup.css
@@ -18,3 +18,7 @@ body #wall .parent #tag-4 {
 body #wall .parent #tag-5.slick {
   display: none;
 }
+
+body #wall .parent div #tag-6 {
+  display: none; 
+}
