--- a/css/cleanup.css
+++ b/css/cleanup.css
@@ -7,7 +7,7 @@ body #wall #tag-2{
   display: none;
 }
 
-body #wall #tag-3.slick, #tag-3.wicked {
+body #wall #tag-3.wicked {
   display: none;
 }
 
